# sm_wf

./: README.md  pyproject.bk.toml  pyproject.toml
envs/: mtoolbox.yml
src/: main.py
src/workflows/: w1.smk
