[tool.poetry]
name = "sm_wf"
version = "0.0.2"
description = ""
authors = ["domenico-simone <dome.simone@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello_dK = "src.tools:hello_world"
hi_dK = "src.tools:hi_everyone"
wf1 = "src.main:run_snakemake_workflow"

[tool.poetry.dependencies]
python = "^3.10"
# snakemake = "^7.23"
# samtools = "^1.11"
numpy = "^1.19.2"
# picard = "^2.23.7"
# bcftools = "^1.11"
# trimmomatic = "^0.39"
biopython = "^1.78"
pip = "^20.2.3"
# seqtk = "^1.3"
# pyvcf = "^0.6.7"
# gmap = "^2020.04.08"
# yaml = "^0.2.5"
scipy = "^1.5.2"
# bamutil = "^1.0.14"
# fastqc = "^0.11.9"
# gatk-framework = { git = "https://github.com/chapmanb/gatk.git", branch = "master" }
# gatk-framework = "^3.6"
pandas = "^1.1.3"
mtoolnote = "^0.2.0"

[tool.poetry.dev-dependencies]
poetry2setup = "^1.0.0"